@@ -60,8 +60,9 @@ void usage_fprint(
 
 	fprintf( stream, "\tsource: the source file\n\n" );
 
-	fprintf( stream, "\t-c:     codepage of ASCII strings, options: ascii, windows-874, windows-1250,\n"
-	                 "\t        windows-1251, windows-1252 (default), windows-1253, windows-1254,\n"
+	fprintf( stream, "\t-c:     codepage of ASCII strings, options: ascii, windows-874,\n"
+	                 "\t        windows-932, windows-936, windows-1250, windows-1251,\n"
+	                 "\t        windows-1252 (default), windows-1253, windows-1254,\n"
 	                 "\t        windows-1255, windows-1256, windows-1257 or windows-1258\n" );
 	fprintf( stream, "\t-h:     shows this help\n" );
 	fprintf( stream, "\t-v:     verbose output to stderr\n" );
@@ -129,6 +130,7 @@ int main( int argc, char * const argv[] )
 
 	if( libsystem_initialize(
 	     "lnktools",
+	     _IONBF,
 	     &error ) != 1 )
 	{
 		fprintf(
